--- a/contacts.html
+++ b/contacts.html
@@ -1,93 +1,182 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="www/dist/style.css">
-  <title> GKVR </title>
-</head>
-<body>
-<header class="container">
-  <nav role="navigation">
-    <ul>
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a href="about-us.html">Aktivity školy</a>
-        <a href="our-team.html">Náš tým</a>
-        <a href="#">Škola</a>
-        <a href="fotogalery.html">Fotogalerie</a>
-        <a href="#">Pro uchazeče</a>
-        <a href="#">Informace ke studiu</a>
-        <a class="active" href="contacts.html">Kontakty</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="www/dist/style.css" />
+    <title>GKVR</title>
+  </head>
+  <body>
+    <header class="container">
+      <nav role="navigation">
+        <ul class="socials">
+          <li>
+            <a
+              target="_blank"
+              href="https://bakalari.gymhlinsko.cz/bakaweb/Login"
+            >
+              <img
+                src="www/assets/logo/bakalari-logo.png"
+                alt="logo-bakalari"
+              />
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="me-auto">
+            <a href="index.html" class="ms-0">
+              <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            </a>
+          </li>
+          <li>
+            <a href="about-us.html">Aktivity školy</a>
+            <a href="our-team.html">Náš tým</a>
+            <a href="#">Škola</a>
+            <a href="fotogalery.html">Fotogalerie</a>
+            <a href="#">Pro uchazeče</a>
+            <a href="#">Informace ke studiu</a>
+            <a class="active" href="contacts.html">Kontakty</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-<main class="mb-5 pb-5">
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links">
-      </ul>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-center">Kde nás najdete</h1>
-        <h2 class="text-center">Ptejte se nás, na co chcete, rádi Vám odpovíme.</h2>
+    <main class="mb-5 pb-5">
+      <div id="sub-nav">
+        <div class="container">
+          <ul class="links"></ul>
+        </div>
       </div>
-    </div>
 
-    <div class="row text-center mt-3">
-      <div class="col-6 mx-auto">
+      <div class="container">
         <div class="row">
-          <div class="col-6">
-            <h3>Skola</h3>
-            <p>Nám. B. Martinů 5, 695 01 Hodonín<br>
-              +420 722 469 887<br>
-            </p>
-            <p>info@skolanapohodu.cz</p>
+          <div class="col-12">
+            <h1 class="text-center">Kde nás najdete</h1>
+            <h2 class="text-center">
+              Ptejte se nás, na co chcete, rádi Vám odpovíme.
+            </h2>
           </div>
-          <div class="col-6">
-            <h3>Skola</h3>
-            <p>Nám. B. Martinů 5, 695 01 Hodonín<br>
-              +420 722 469 887<br>
-            </p>
-            <p>info@skolanapohodu.cz</p>
+        </div>
+
+        <div class="row text-center mt-3">
+          <div class="col-8 mx-auto">
+            <div class="row">
+              <div class="col-4">
+                <div class="box primary">
+                  <h3 class="mt-0">Škola</h3>
+                  <p>Adámkova 55, 539 01 Hlinsko<br /></p>
+                  <a href="tel:+420 469 311 292">+420 469 311 292</a>
+                  <br />
+                  <a href="tel:+420 469 311 190">+420 469 311 190</a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box secondary">
+                  <h3 class="mt-0">RNDr. Rostislav Dvořáček</h3>
+                  <p>ředitel<br /></p>
+                  <a href="tel:+420 722 469 887">+420 722 469 887</a>
+                  <br />
+                  <a href="mailto: red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box tertiary">
+                  <h3 class="mt-0">Ing. Romana Nováková</h3>
+                  <p>zástupkyně ředitele, Bi, IT, Ltv, Eko<br /></p>
+                  <a href="mailto: novakova.romana@gymhlinsko.cz">
+                    novakova.romana@gymhlinsko.cz
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-        <div class="col-6">
-            <form>
-                <label>
-                    <input type="email" placeholder="neco@neco.cz">
-                </label>
-                <br>
-                <label>
-                    <input type="text" placeholder="vase jmeno">
-                </label>
-                <br>
-                <label>
-                    <input type="tel" placeholder="vase cislo">
-                </label>
-                <br>
-                <label>
-                    <textarea placeholder="Napiste sem vas dotaz">
-                    </textarea>
-                </label>
-            </form>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="stripe primary text-center">
+              Napiště nám Váš dotaz pomocí formuláře
+            </div>
+          </div>
         </div>
-    </div>
-  </div>
-</main>
-</body>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-6 mx-auto">
+            <form>
+              <label>
+                Jméno a příjmení
+                <input type="text" placeholder="Př.: Vladimír Novák..." />
+              </label>
+              <label>
+                Váš e-mail
+                <input type="email" placeholder="Př.: E-mail@seznam.cz..." />
+              </label>
+              <label>
+                Telefonní číslo
+                <input type="tel" placeholder="Př.: 123 456 789..." />
+              </label>
+              <label>
+                Napiště zde Váš dotaz
+                <textarea placeholder="Popište Váš dotaz zde..." rows="7">
+                </textarea>
+              </label>
+              <button class="btn btn-primary mt-2" type="submit">
+                Odeslat dotaz
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-4 mx-auto text-left">
+            <img
+              class="logo"
+              alt="logo"
+              src="www/assets/logo/logo-footer.png"
+            />
+          </div>
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-location-dot fa-2x"></i>
+              </div>
+              <div class="col-10 my-auto text-left">
+                <a href="#"> Adámkova 55, 539 01 Hlinsko </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-comment fa-2x"></i>
+              </div>
+              <div class="col-10 d-flex flex-column text-left">
+                <a href="#"> 469 311 292 </a>
+                <a href="#"> red@gymhlinsko.cz </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-2 mx-auto text-center">
+            <a href="#">
+              <i class="fa-brands fa-facebook fa-2x"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
+
+  <script type="text/javascript" src="www/dist/scripts.min.js"></script>
+  <script
+    defer
+    src="node_modules/@fortawesome/fontawesome-free/js/all.js"
+  ></script>
 </html>
