--- a/index.html
+++ b/index.html
@@ -1,189 +1,210 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="www/dist/style.css">
-  <title> GKVR </title>
-</head>
-<body>
-<header class="container">
-  <nav role="navigation">
-    <ul class="socials">
-      <li>
-        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari">
-        </a>
-      </li>
-    </ul>
-    <ul>
-      <li class="me-auto">
-        <a href="#" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a href="about-us.html">Aktivity školy</a>
-        <a href="our-team.html">Náš tým</a>
-        <a href="#">Škola</a>
-        <a href="fotogalery.html">Fotogalerie</a>
-        <a href="#">Pro uchazeče</a>
-        <a href="#">Informace ke studiu</a>
-        <a href="contacts.html">Kontakty</a>
-      </li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <div id="background"></div>
-
-  <div class="container">
-    <div class="row my-5">
-      <div class="col-10 mx-auto">
-        <div class="text-center">
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam neque. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
-      <div class="col-10 mx-auto">
-        <div class="text-center">
-          <p class="text-green bold">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam neque. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
-      <div class="col-10 mx-auto">
-        <div class="text-center">
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam neque. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid gray-section py-5">
-    <div class="container icons my-3">
-      <div class="row">
-        <div class="col-10 mx-auto">
-          <div class="row">
-            <div class="col-4 text-center">
-              <a href="#" class="rotate mb-3">
-                <div class="mx-auto">
-                  <i class="fa-solid fa-chalkboard-user fa-5x"></i>
-                </div>
-                <h2 class="text-blue">Základní informace</h2>
-              </a>
-              <span>
-                Informace o škole, jejím životě a novinkách.
-              </span>
-            </div>
-            <div class="col-4 text-center">
-              <a href="#" class="rotate mb-3">
-                <div class="mx-auto">
-                  <i class="fa-solid fa-school fa-5x "></i>
-                </div>
-                <h2 class="text-yellow">Informace pro uchazeče</h2>
-              </a>
-              <span>
-                Informace pro zájemce o studium.
-              </span>
-            </div>
-            <div class="col-4 text-center">
-              <a href="#" class="rotate mb-3">
-                <div class="mx-auto">
-                  <i class="fa-solid fa-graduation-cap fa-5x "></i>
-                </div>
-                <h2 class="text-green">Obrazem od nás</h2>
-              </a>
-              <span>
-                Záběry ze školních výletů, seminářů, div. kroužků...
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container pb-5">
-    <div class="row my-5">
-      <div class="col-12">
-        <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
-        <div class="row">
-          <div class="col-6 text-center">
-            <a href="https://www.pardubickykraj.cz/">
-              <img class="pardubice-img" alt="Logo Pardubického kraje" src="www/assets/logo-pardubice.png">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="www/dist/style.css" />
+    <title>GKVR</title>
+  </head>
+  <body>
+    <header class="container">
+      <nav role="navigation">
+        <ul class="socials">
+          <li>
+            <a
+              target="_blank"
+              href="https://bakalari.gymhlinsko.cz/bakaweb/Login"
+            >
+              <img
+                src="www/assets/logo/bakalari-logo.png"
+                alt="logo-bakalari"
+              />
             </a>
-          </div>
-          <div class="col-6 my-auto">
-            <a href="https://www.klickevzdelani.cz/" class="d-flex align-items-center justify-content-center">
-              <img class="portal-img" alt="Školský portál" src="www/assets/skolsky-portal.png">
+          </li>
+        </ul>
+        <ul>
+          <li class="me-auto">
+            <a href="#" class="ms-0">
+              <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            </a>
+          </li>
+          <li>
+            <a href="about-us.html">Aktivity školy</a>
+            <a href="our-team.html">Náš tým</a>
+            <a href="#">Škola</a>
+            <a href="fotogalery.html">Fotogalerie</a>
+            <a href="#">Pro uchazeče</a>
+            <a href="#">Informace ke studiu</a>
+            <a href="contacts.html">Kontakty</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div id="background"></div>
+
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-10 mx-auto">
+            <div class="text-center">
               <p>
-                Školský portál pardubického kraje
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+                neque. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </p>
+            </div>
+          </div>
+          <div class="col-10 mx-auto">
+            <div class="text-center">
+              <p class="text-green bold">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+                neque. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+          </div>
+          <div class="col-10 mx-auto">
+            <div class="text-center">
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam
+                neque. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid gray-section py-5">
+        <div class="container icons my-3">
+          <div class="row">
+            <div class="col-10 mx-auto">
+              <div class="row">
+                <div class="col-4 text-center">
+                  <a href="#" class="rotate mb-3">
+                    <div class="mx-auto">
+                      <i class="fa-solid fa-chalkboard-user fa-5x"></i>
+                    </div>
+                    <h2 class="text-blue">Základní informace</h2>
+                  </a>
+                  <span> Informace o škole, jejím životě a novinkách. </span>
+                </div>
+                <div class="col-4 text-center">
+                  <a href="#" class="rotate mb-3">
+                    <div class="mx-auto">
+                      <i class="fa-solid fa-school fa-5x"></i>
+                    </div>
+                    <h2 class="text-yellow">Informace pro uchazeče</h2>
+                  </a>
+                  <span> Informace pro zájemce o studium. </span>
+                </div>
+                <div class="col-4 text-center">
+                  <a href="#" class="rotate mb-3">
+                    <div class="mx-auto">
+                      <i class="fa-solid fa-graduation-cap fa-5x"></i>
+                    </div>
+                    <h2 class="text-green">Obrazem od nás</h2>
+                  </a>
+                  <span>
+                    Záběry ze školních výletů, seminářů, div. kroužků...
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container pb-5">
+        <div class="row my-5">
+          <div class="col-12">
+            <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
+            <div class="row">
+              <div class="col-6 text-center">
+                <a href="https://www.pardubickykraj.cz/">
+                  <img
+                    class="pardubice-img"
+                    alt="Logo Pardubického kraje"
+                    src="www/assets/logo-pardubice.png"
+                  />
+                </a>
+              </div>
+              <div class="col-6 my-auto">
+                <a
+                  href="https://www.klickevzdelani.cz/"
+                  class="d-flex align-items-center justify-content-center"
+                >
+                  <img
+                    class="portal-img"
+                    alt="Školský portál"
+                    src="www/assets/skolsky-portal.png"
+                  />
+                  <p>Školský portál pardubického kraje</p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <h3 class="mb-4">
+              Naše škola je fakultní školou Univerzity Palackého v Olomouci
+            </h3>
+            <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578">
+              <img
+                alt="logo fakultni skoly"
+                class="upol-img"
+                src="www/assets/fakultni-skola-upol.png"
+              />
             </a>
           </div>
         </div>
       </div>
-      <div class="col-12 text-center">
-        <h3 class="mb-4">Naše škola je fakultní školou Univerzity Palackého v Olomouci</h3>
-        <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578">
-          <img alt="logo fakultni skoly" class="upol-img" src="www/assets/fakultni-skola-upol.png">
-        </a>
-      </div>
-    </div>
-  </div>
-</main>
+    </main>
 
-<footer>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-4 mx-auto text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
-      </div>
-      <div class="col-3 mx-auto text-center">
-        <div class="row">
-          <div class="col-2 text-right my-auto">
-            <i class="fa-solid fa-location-dot fa-2x"></i>
+    <footer>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-4 mx-auto text-left">
+            <img
+              class="logo"
+              alt="logo"
+              src="www/assets/logo/logo-footer.png"
+            />
           </div>
-          <div class="col-10 my-auto text-left">
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-location-dot fa-2x"></i>
+              </div>
+              <div class="col-10 my-auto text-left">
+                <a href="#"> Adámkova 55, 539 01 Hlinsko </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-comment fa-2x"></i>
+              </div>
+              <div class="col-10 d-flex flex-column text-left">
+                <a href="#"> 469 311 292 </a>
+                <a href="#"> red@gymhlinsko.cz </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-2 mx-auto text-center">
             <a href="#">
-              Adámkova 55, 539 01 Hlinsko
+              <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-3 mx-auto text-center">
-        <div class="row">
-          <div class="col-2 text-right my-auto">
-            <i class="fa-solid fa-comment fa-2x"></i>
-          </div>
-          <div class="col-10 d-flex flex-column text-left">
-            <a href="#">
-              469 311 292
-            </a>
-            <a href="#">
-              red@gymhlinsko.cz
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-2 mx-auto text-center">
-        <a href="#">
-          <i class="fa-brands fa-facebook fa-2x"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
+    </footer>
 
-<script type="text/javascript" src="www/dist/scripts.min.js"></script>
-<script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
-
-</body>
+    <script type="text/javascript" src="www/dist/scripts.min.js"></script>
+    <script
+      defer
+      src="node_modules/@fortawesome/fontawesome-free/js/all.js"
+    ></script>
+  </body>
+</html>
