--- a/our-team.html
+++ b/our-team.html
@@ -1,163 +1,196 @@
 <html lang="cs">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="www/dist/style.css">
-  <title> GKVR </title>
-</head>
-<body>
-<header class="container">
-  <nav role="navigation">
-    <ul>
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a href="about-us.html">Aktivity školy</a>
-        <a class="active" href="our-team.html">Náš tým</a>
-        <a href="#">Škola</a>
-        <a href="fotogalery.html">Fotogalerie</a>
-        <a href="#">Pro uchazeče</a>
-        <a href="#">Informace ke studiu</a>
-        <a href="contacts.html">Kontakty</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="www/dist/style.css" />
+    <title>GKVR</title>
+  </head>
+  <body>
+    <header class="container">
+      <nav role="navigation">
+        <ul class="socials">
+          <li>
+            <a
+              target="_blank"
+              href="https://bakalari.gymhlinsko.cz/bakaweb/Login"
+            >
+              <img
+                src="www/assets/logo/bakalari-logo.png"
+                alt="logo-bakalari"
+              />
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="me-auto">
+            <a href="index.html" class="ms-0">
+              <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            </a>
+          </li>
+          <li>
+            <a href="about-us.html">Aktivity školy</a>
+            <a class="active" href="our-team.html">Náš tým</a>
+            <a href="#">Škola</a>
+            <a href="fotogalery.html">Fotogalerie</a>
+            <a href="#">Pro uchazeče</a>
+            <a href="#">Informace ke studiu</a>
+            <a href="contacts.html">Kontakty</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-<main class="mb-5 pb-5">
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links">
-        <li>
-          <a class="active" href="#">S kým se u nás setkáte</a>
-          <a href="#">Hledáme do týmu</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+    <main class="mb-5 pb-5">
+      <div id="sub-nav">
+        <div class="container">
+          <ul class="links">
+            <li>
+              <a class="active" href="#">S kým se u nás setkáte</a>
+              <a href="#">Hledáme do týmu</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-center">S kým se u nás setkáte</h1>
-      </div>
-    </div>
-    <div class="row contacts mb-4">
-      <div class="col-3 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-9">
-        <article class="odd">
-          <h3 class="mb-1">Mgr. Jiri Kos</h3>
-          <h4 class="m-0">ucitel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">jiri.kos@seznam.cz</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis condimentum augue id magna semper rutrum.
-            Fusce consectetuer risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque tincidunt scelerisque libero.
-            Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Aliquam erat volutpat. Pellentesque arcu.
-            Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel velit. Lorem ipsum dolor sit
-            amet, consectetuer adipiscing elit. Etiam posuere lacus quis dolor. Quisque porta. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-            ratione voluptatem sequi nesciunt. Morbi leo mi, nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="row contacts mb-4">
-      <div class="col-3 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-9">
-        <article class="even">
-          <h3 class="mb-1">RNDr. Rostislav Dvoracek</h3>
-          <h4 class="m-0">reditel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">rostislav.dvoracek@seznam.cz</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis condimentum augue id magna semper rutrum.
-            Fusce consectetuer risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque tincidunt scelerisque libero.
-            Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Aliquam erat volutpat. Pellentesque arcu.
-            Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel velit. Lorem ipsum dolor sit
-            amet, consectetuer adipiscing elit. Etiam posuere lacus quis dolor. Quisque porta. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-            ratione voluptatem sequi nesciunt. Morbi leo mi, nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="row contacts mb-4">
-      <div class="col-3 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-9">
-        <article class="odd">
-          <h3 class="mb-1">Mgr. Romana Novakova</h3>
-          <h4 class="m-0">zastupkyne reditel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">romana.novakova@seznam.cz</a>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis condimentum augue id magna semper rutrum.
-            Fusce consectetuer risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque tincidunt scelerisque libero.
-            Cras pede libero, dapibus nec, pretium sit amet, tempor quis. Aliquam erat volutpat. Pellentesque arcu.
-            Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer pellentesque quam vel velit. Lorem ipsum dolor sit
-            amet, consectetuer adipiscing elit. Etiam posuere lacus quis dolor. Quisque porta. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-            ratione voluptatem sequi nesciunt. Morbi leo mi, nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-  </div>
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-4 mx-auto text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
-      </div>
-      <div class="col-3 mx-auto text-center">
+      <div class="container">
         <div class="row">
-          <div class="col-2 text-right my-auto">
-            <i class="fa-solid fa-location-dot fa-2x"></i>
+          <div class="col-12">
+            <h1 class="text-center">S kým se u nás setkáte</h1>
           </div>
-          <div class="col-10 my-auto text-left">
+        </div>
+        <div class="row contacts mb-4">
+          <div class="col-3 d-flex justify-content-center align-items-center">
+            <i class="fa-regular fa-circle-user fa-10x"></i>
+          </div>
+          <div class="col-9">
+            <article class="odd">
+              <h3 class="mb-1">Mgr. Jiri Kos</h3>
+              <h4 class="m-0">ucitel</h4>
+              <a href="mailto:jiri.kos@seznam.cz">jiri.kos@seznam.cz</a>
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+                condimentum augue id magna semper rutrum. Fusce consectetuer
+                risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+                tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+                pretium sit amet, tempor quis. Aliquam erat volutpat.
+                Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+                debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+                repudiandae sint et molestiae non recusandae. Integer
+                pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+                Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+                aspernatur aut odit aut fugit, sed quia consequuntur magni
+                dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+                nonummy eget tristique non, rhoncus non leo.
+              </p>
+            </article>
+          </div>
+        </div>
+        <div class="row contacts mb-4">
+          <div class="col-3 d-flex justify-content-center align-items-center">
+            <i class="fa-regular fa-circle-user fa-10x"></i>
+          </div>
+          <div class="col-9">
+            <article class="even">
+              <h3 class="mb-1">RNDr. Rostislav Dvoracek</h3>
+              <h4 class="m-0">reditel</h4>
+              <a href="mailto:jiri.kos@seznam.cz"
+                >rostislav.dvoracek@seznam.cz</a
+              >
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+                condimentum augue id magna semper rutrum. Fusce consectetuer
+                risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+                tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+                pretium sit amet, tempor quis. Aliquam erat volutpat.
+                Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+                debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+                repudiandae sint et molestiae non recusandae. Integer
+                pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+                Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+                aspernatur aut odit aut fugit, sed quia consequuntur magni
+                dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+                nonummy eget tristique non, rhoncus non leo.
+              </p>
+            </article>
+          </div>
+        </div>
+        <div class="row contacts mb-4">
+          <div class="col-3 d-flex justify-content-center align-items-center">
+            <i class="fa-regular fa-circle-user fa-10x"></i>
+          </div>
+          <div class="col-9">
+            <article class="odd">
+              <h3 class="mb-1">Mgr. Romana Novakova</h3>
+              <h4 class="m-0">zastupkyne reditel</h4>
+              <a href="mailto:jiri.kos@seznam.cz">romana.novakova@seznam.cz</a>
+              <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+                condimentum augue id magna semper rutrum. Fusce consectetuer
+                risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+                tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+                pretium sit amet, tempor quis. Aliquam erat volutpat.
+                Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+                debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+                repudiandae sint et molestiae non recusandae. Integer
+                pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+                consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+                Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+                aspernatur aut odit aut fugit, sed quia consequuntur magni
+                dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+                nonummy eget tristique non, rhoncus non leo.
+              </p>
+            </article>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-4 mx-auto text-left">
+            <img
+              class="logo"
+              alt="logo"
+              src="www/assets/logo/logo-footer.png"
+            />
+          </div>
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-location-dot fa-2x"></i>
+              </div>
+              <div class="col-10 my-auto text-left">
+                <a href="#"> Adámkova 55, 539 01 Hlinsko </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mx-auto text-center">
+            <div class="row">
+              <div class="col-2 text-right my-auto">
+                <i class="fa-solid fa-comment fa-2x"></i>
+              </div>
+              <div class="col-10 d-flex flex-column text-left">
+                <a href="#"> 469 311 292 </a>
+                <a href="#"> red@gymhlinsko.cz </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-2 mx-auto text-center">
             <a href="#">
-              Adámkova 55, 539 01 Hlinsko
+              <i class="fa-brands fa-facebook fa-2x"></i>
             </a>
           </div>
         </div>
       </div>
-      <div class="col-3 mx-auto text-center">
-        <div class="row">
-          <div class="col-2 text-right my-auto">
-            <i class="fa-solid fa-comment fa-2x"></i>
-          </div>
-          <div class="col-10 d-flex flex-column text-left">
-            <a href="#">
-              469 311 292
-            </a>
-            <a href="#">
-              red@gymhlinsko.cz
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-2 mx-auto text-center">
-        <a href="#">
-          <i class="fa-brands fa-facebook fa-2x"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
+    </footer>
+  </body>
 
-</body>
-
-<script type="text/javascript" src="www/dist/scripts.min.js"></script>
-<script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
+  <script type="text/javascript" src="www/dist/scripts.min.js"></script>
+  <script
+    defer
+    src="node_modules/@fortawesome/fontawesome-free/js/all.js"
+  ></script>
 </html>
